# awm

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  awm.desktop  build.sh  config-minimal.toml  config.toml  flake.nix  meson.build  meson.options  xdg-shell-protocol.sh
.github/workflows/: build.yml
.zed/: debug.json
awmsg/: awmsg.bash  awmsg.fish  awmsg.usage  awmsg.zsh  main.cpp  meson.build
awmtest/: main.cpp  test.h  tests.md
awmtest/tests/: autotile_max_fullscreen.cpp  autotile_maximize_add.cpp  autotile_maximize_swap.cpp  fullscreen_10.cpp  fullscreen_size.cpp  maximize_10.cpp  maximize_size.cpp  maximize_waybar.cpp  workspaces_10.cpp  workspaces_misc.cpp
include/: ActivationToken.h  BSPTree.h  Config.h  Cursor.h  CursorMode.h  DataControlManager.h  Decoration.h  IPC.h  IdleInhibitor.h  InputMethod.h  InputMethodPopup.h  InputRelay.h  Keyboard.h  LayerShell.h  LayerSurface.h  Output.h  OutputManager.h  PointerConstraint.h  Popup.h  Seat.h  Server.h  ServerDecoration.h  SessionLock.h  TearingController.h  TextInput.h  Toml.h  Toplevel.h  Transaction.h  WindowRule.h  Workspace.h  WorkspaceManager.h  XWayland.h  XWaylandShell.h  XWaylandSurface.h  util.h  version.h  wlr.h
protocols/: cursor-shape-v1.xml  tablet-v2.xml
src/: ActivationToken.cpp  BSPTree.cpp  Config.cpp  Cursor.cpp  DataControlManager.cpp  Decoration.cpp  IPC.cpp  IdleInhibitor.cpp  InputMethod.cpp  InputMethodPopup.cpp  InputRelay.cpp  Keyboard.cpp  LayerShell.cpp  LayerSurface.cpp  Output.cpp  OutputManager.cpp  PointerConstraint.cpp  Popup.cpp  Seat.cpp  Server.cpp  ServerDecoration.cpp  SessionLock.cpp  TearingController.cpp  TextInput.cpp  Toml.cpp  Toplevel.cpp  Transaction.cpp  WindowRule.cpp  Workspace.cpp  WorkspaceManager.cpp  XWayland.cpp  XWaylandShell.cpp  XWaylandSurface.cpp  main.cpp  main.rs
subprojects/: .gitignore  json.wrap  tomlcpp.wrap  wlroots.wrap
